--- a/离散数学/离散数学.vcxproj
+++ b/离散数学/离散数学.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{6360D5EE-DB34-417B-B73F-28E23A5AD64F}</ProjectGuid>
     <RootNamespace>离散数学</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>离散数学第一次大作业</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
